Added explicit CC license

--- a/presentation.tex
+++ b/presentation.tex
@@ -97,7 +97,21 @@ align=center, inner sep=5pt, fill=none}]
 
 
 \begin{document}
-\imageframe{warning}
+
+\begin{frame}{}
+\Large
+
+This presentation is made available under a Creative Commons
+Attribution-ShareAlike license.
+
+\begin{center}
+    \includegraphics[width=0.8\linewidth]{cc-by-sa}
+\end{center}
+
+{\Medium EXCEPT} for the Gruffalo pictures that are Copyright Julia Donaldson
+and Axel Scheffler.
+
+\end{frame}
 
 \maketitle
 
